2005-11-07  Roland McGrath  <roland@redhat.com>

	* configure.in: Grok --with-cpu=CPU option.  If given, search for
	sysdeps/.../machine/CPU subdirs, and give error if none are found.
	* configure: Regenerated.
	* config.make.in (with-cpu): New substituted variable.
	* Makeconfig (+cflags): Add -mcpu=$(with-cpu) if set.

	* malloc/malloc.c (munmap_chunk): Suppress warnings from last change.

	* sysdeps/unix/bsd/sun: Directory and all subdirectories removed,
	saved in ports repository.
	* sysdeps/unix/sysv/linux/tcflush.c: Rewritten.
	* sysdeps/unix/sysv/linux/tcflow.c: Rewritten.

2005-11-06  Ulrich Drepper  <drepper@redhat.com>

	* malloc/malloc.c (munmap_chunk): Add sanity checks.

	* sysdeps/pthread/configure: Fix comment.

2005-11-05  Ulrich Drepper  <drepper@redhat.com>

	* configure.in: Remove gnu_as definition and everything using it.
	* config.make.in: Remove gnu-as.
	* config.h.in: Remove HAVE_GNU_AS.

	* configure.in: Remove gnu_ld definition and everything using it.
	* config.h.in: Remove HAVE_GNU_LD.
	* config.make.in: Remove gnu-ld.
	* csu/Makefile: Remove use of gnu-ld.
	* csu/munch.awk: Removed.
	* csu/munch-tmpl.c: Removed.
	* include/libc-symbols.h: Remove use of HAVE_GNU_LD.
	* posix/execl.c: Likewise.
	* posix/execv.c: Likewise.
	* stdio-common/psignal.c: Likewise.
	* stdlib/exit.c: Likewise.
	* string/strsignal.c: Likewise.
	* string/tester.c: Likewise.
	* sysdeps/generic/errlist.c: Likewise.
	* sysdeps/generic/getenv.c: Likewise.
	* sysdeps/generic/getgroups.c: Likewise.
	* sysdeps/generic/init-posix.c: Likewise.
	* sysdeps/posix/gettimeofday.c: Likewise.
	* sysdeps/posix/system.c: Likewise.
	* sysdeps/unix/bsd/init-posix.c: Likewise.
	* sysdeps/unix/bsd/ulimit.c: Likewise.
	* sysdeps/unix/bsd/sun/m68k/brk.S: Likewise.
	* sysdeps/unix/bsd/sun/m68k/sethostid.S: Likewise.
	* sysdeps/unix/bsd/sun/sparc/sethostid.S: Likewise.
	* sysdeps/unix/i386/brk.S: Likewise.
	* sysdeps/unix/sparc/brk.S: Likewise.
